[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-blend-network"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
either                        = { workspace = true }
futures                       = { workspace = true }
futures-timer                 = { workspace = true }
hex                           = { workspace = true }
lb-blend-message              = { workspace = true }
lb-blend-proofs               = { workspace = true }
lb-blend-scheduling           = { workspace = true }
lb-core                       = { workspace = true }
lb-key-management-system-keys = { workspace = true }
lb-libp2p                     = { workspace = true }
lb-log-targets                = { workspace = true }
libp2p                        = { workspace = true }
tracing                       = { workspace = true }

[dev-dependencies]
async-trait         = { workspace = true }
lb-blend-message    = { features = ["unsafe-test-functions"], workspace = true }
lb-blend-scheduling = { features = ["unsafe-test-functions"], workspace = true }
libp2p              = { features = ["plaintext", "tcp", "yamux"], workspace = true }
libp2p-stream       = { workspace = true }
libp2p-swarm-test   = { features = ["tokio"], workspace = true }
test-log            = { features = ["trace"], workspace = true }
tokio               = { workspace = true }
tokio-stream        = { workspace = true }

[features]
unsafe-test-functions = []
