[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-blend-proofs"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
ed25519-dalek   = { workspace = true }
generic-array   = { default-features = false, version = "1.2" }
hex             = { workspace = true }
lb-blend-crypto = { workspace = true }
lb-groth16      = { workspace = true }
lb-pol          = { workspace = true }
lb-poq          = { workspace = true }
lb-utils        = { workspace = true }
num-bigint      = { default-features = false, version = "0.4" }
serde           = { workspace = true }
thiserror       = "1"
zeroize         = { workspace = true }

[dev-dependencies]
const-hex                     = { default-features = false, version = "1.15.0" }
lb-core                       = { workspace = true }
lb-key-management-system-keys = { workspace = true }

[features]
unsafe-test-functions = []
