[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-blend-proofs"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
ed25519-dalek   = { workspace = true }
generic-array   = { workspace = true }
hex             = { workspace = true }
lb-blend-crypto = { workspace = true }
lb-groth16      = { workspace = true }
lb-pol          = { workspace = true }
lb-poq          = { workspace = true }
lb-utils        = { workspace = true }
num-bigint      = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
zeroize         = { workspace = true }

[dev-dependencies]
const-hex                     = { workspace = true }
lb-core                       = { workspace = true }
lb-key-management-system-keys = { workspace = true }

[features]
unsafe-test-functions = []
