[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-blend-scheduling"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait                   = { default-features = false, version = "0.1" }
derivative                    = "2"
fork_stream                   = { workspace = true }
futures                       = { default-features = false, version = "0.3" }
hex                           = { workspace = true }
lb-blend-message              = { workspace = true }
lb-blend-proofs               = { workspace = true }
lb-core                       = { workspace = true }
lb-cryptarchia-engine         = { workspace = true }
lb-groth16                    = { workspace = true }
lb-key-management-system-keys = { workspace = true }
lb-utils                      = { features = ["rng"], workspace = true }
multiaddr                     = { default-features = false, version = "0.18" }
rand                          = { features = ["alloc"], workspace = true }
serde                         = { workspace = true }
thiserror                     = { default-features = false, version = "1" }
tokio                         = { default-features = false, version = "1" }
tokio-stream                  = { default-features = false, version = "0.1" }
tokio-util                    = { default-features = false, version = "0.7" }
tracing                       = { workspace = true }

[dev-dependencies]
lb-blend-message = { features = ["unsafe-test-functions"], workspace = true }
lb-blend-proofs  = { features = ["unsafe-test-functions"], workspace = true }
lb-groth16       = { workspace = true }
libp2p           = { workspace = true }
test-log         = { default-features = false, features = ["trace"], version = "0.2.18" }

[features]
unsafe-test-functions = []
