[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-blend-scheduling"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait                   = { workspace = true }
derivative                    = { workspace = true }
fork_stream                   = { workspace = true }
futures                       = { workspace = true }
hex                           = { workspace = true }
lb-blend-message              = { workspace = true }
lb-blend-proofs               = { workspace = true }
lb-core                       = { workspace = true }
lb-cryptarchia-engine         = { workspace = true }
lb-groth16                    = { workspace = true }
lb-key-management-system-keys = { workspace = true }
lb-log-targets                = { workspace = true }
lb-utils                      = { features = ["rng", "tokio"], workspace = true }
multiaddr                     = { workspace = true }
rand                          = { features = ["alloc"], workspace = true }
serde                         = { workspace = true }
thiserror                     = { workspace = true }
tokio                         = { workspace = true }
tokio-stream                  = { workspace = true }
tracing                       = { workspace = true }

[dev-dependencies]
lb-blend-message = { features = ["unsafe-test-functions"], workspace = true }
lb-blend-proofs  = { features = ["unsafe-test-functions"], workspace = true }
lb-groth16       = { workspace = true }
libp2p           = { workspace = true }
test-log         = { features = ["trace"], workspace = true }

[features]
unsafe-test-functions = []
