[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-cryptarchia-engine"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[package.metadata.cargo-machete]
# False positives.
ignored = ["logos-blockchain-utils"]

[lints]
workspace = true

[dependencies]
cfg_eval   = { optional = true, version = "0.1" }
lb-pol     = { workspace = true }
lb-utils   = { workspace = true }
serde      = { optional = true, workspace = true }
serde_with = { features = ["macros"], optional = true, workspace = true }
thiserror  = "1"
time       = { default-features = false, version = "0.3" }
tokio      = { features = ["time"], optional = true, workspace = true }
tracing    = { workspace = true }

[features]
serde = ["dep:cfg_eval", "dep:serde", "dep:serde_with", "lb-utils/serde", "lb-utils/time"]
tokio = ["dep:tokio"]
