[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-cryptarchia-engine"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[package.metadata.cargo-machete]
# False positives.
ignored = ["logos-blockchain-utils"]

[lints]
workspace = true

[dependencies]
lb-pol     = { workspace = true }
lb-utils   = { features = ["time"], workspace = true }
serde      = { workspace = true }
serde_with = { features = ["macros"], workspace = true }
thiserror  = "1"
time       = { workspace = true }
tokio      = { features = ["time"], optional = true, workspace = true }
tracing    = { workspace = true }

[features]
tokio = ["dep:tokio"]
