[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-cryptarchia-sync"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
bytes                 = { features = ["serde"], workspace = true }
futures               = { default-features = false, version = "0.3" }
lb-core               = { workspace = true }
lb-cryptarchia-engine = { workspace = true }
libp2p                = { optional = true, workspace = true }
libp2p-stream         = { optional = true, workspace = true }
rand                  = { workspace = true }
serde                 = { workspace = true }
serde_with            = { workspace = true }
thiserror             = "1"
tokio                 = { default-features = false, version = "1" }
tracing               = { default-features = false, version = "0.1" }

[dev-dependencies]
libp2p            = { features = ["dns", "quic", "tokio"], workspace = true }
libp2p-swarm-test = { default-features = false, version = "0.5" }

[features]
default = []
libp2p  = ["dep:libp2p", "dep:libp2p-stream"]
