[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-cryptarchia-sync"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
bytes                 = { features = ["serde"], workspace = true }
futures               = { workspace = true }
lb-core               = { workspace = true }
lb-cryptarchia-engine = { workspace = true }
libp2p                = { workspace = true }
libp2p-stream         = { workspace = true }
rand                  = { workspace = true }
serde                 = { workspace = true }
serde_with            = { workspace = true }
thiserror             = { workspace = true }
tokio                 = { workspace = true }
tracing               = { workspace = true }

[dev-dependencies]
libp2p            = { features = ["dns", "quic", "tokio"], workspace = true }
libp2p-swarm-test = { workspace = true }
