[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-key-management-system-keys"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait                     = { workspace = true }
bytes                           = { workspace = true }
ed25519-dalek                   = { features = ["rand_core", "serde", "zeroize"], workspace = true }
generic-array                   = { workspace = true }
hex                             = { workspace = true }
lb-groth16                      = { workspace = true }
lb-key-management-system-macros = { workspace = true }
lb-poseidon2                    = { workspace = true }
lb-utils                        = { features = ["rng"], workspace = true }
lb-zksign                       = { workspace = true }
num-bigint                      = { workspace = true }
rand_core                       = { workspace = true }
serde                           = { features = ["derive"], workspace = true }
subtle                          = { workspace = true }
thiserror                       = { workspace = true }
tokio                           = { features = ["rt"], workspace = true }
tracing                         = { workspace = true }
x25519-dalek                    = { features = ["serde", "static_secrets", "zeroize"], workspace = true }
zeroize                         = { workspace = true }

[features]
unsafe = []
