[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-http-api-common"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
axum                          = { default-features = false, features = ["http1", "http2", "json", "query", "tokio"], version = "0.7.5" }
lb-core                       = { workspace = true }
lb-key-management-system-keys = { workspace = true }
serde                         = { features = ["alloc", "derive"], workspace = true }
serde_json                    = { workspace = true }
serde_with                    = { default-features = false, features = ["macros"], workspace = true }
tokio                         = { default-features = false, features = ["time"], optional = true, version = "1" }
tracing                       = { default-features = false, workspace = true }

[target.'cfg(not(windows))'.dependencies]
pprof = { default-features = false, features = [
  "criterion",
  "flamegraph",
  "protobuf-codec",
], optional = true, version = "0.15" }

[features]
profiling = ["pprof", "tokio"]
