[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-http-api-common"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
axum                          = { features = ["http1", "http2", "json", "matched-path", "query", "tokio"], workspace = true }
lb-core                       = { workspace = true }
lb-key-management-system-keys = { workspace = true }
lb-tracing                    = { workspace = true }
serde                         = { features = ["alloc", "derive"], workspace = true }
serde_json                    = { workspace = true }
serde_with                    = { features = ["macros"], workspace = true }
tokio                         = { features = ["time"], optional = true, workspace = true }
tracing                       = { workspace = true }

[target.'cfg(not(windows))'.dependencies]
pprof = { features = ["criterion", "flamegraph", "protobuf-codec"], optional = true, workspace = true }

[features]
profiling = ["dep:pprof", "dep:tokio"]
