[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-api-service"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[features]
axum            = ["dep:axum", "dep:hyper", "utoipa-swagger-ui/axum"]
block-explorer  = []
default         = ["axum"]
instrumentation = []

[dependencies]
async-trait                 = "0.1"
bytes                       = { workspace = true }
futures                     = { default-features = false, version = "0.3.31" }
lb-chain-broadcast-service  = { workspace = true }
lb-chain-service            = { features = ["libp2p"], workspace = true }
lb-core                     = { workspace = true }
lb-da-dispersal-service     = { workspace = true }
lb-da-network-core          = { workspace = true }
lb-da-network-service       = { workspace = true }
lb-da-sampling-service      = { workspace = true }
lb-da-verifier-service      = { features = ["rocksdb-backend"], workspace = true }
lb-kzgrs-backend            = { workspace = true }
lb-libp2p                   = { workspace = true }
lb-network-service          = { workspace = true }
lb-sdp-service              = { workspace = true }
lb-storage-service          = { features = ["rocksdb-backend"], workspace = true }
lb-subnetworks-assignations = { workspace = true }
lb-time-service             = { workspace = true }
lb-tx-service               = { features = ["libp2p", "mock", "openapi"], workspace = true }
overwatch                   = { workspace = true }
serde                       = { workspace = true }
serde_json                  = { default-features = false, version = "1.0.140" }
tokio                       = { default-features = false, features = ["net"], version = "1" }
tokio-stream                = { default-features = false, version = "0.1" }
tracing                     = { default-features = false, version = "0.1" }

# axum related dependencies
axum = { default-features = false, features = [
  "http1",
  "http2",
  "json",
  "query",
  "tokio",
], optional = true, version = "0.7.5" }
hyper = { default-features = false, optional = true, version = "1.0" }

# openapi related dependencies
utoipa            = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]
axum              = { default-features = false, features = ["http1", "http2", "json", "query", "tokio"], version = "0.7.5" }
hyper             = { default-features = false, version = "1.0" }
reqwest           = { default-features = false, workspace = true }
serde             = { workspace = true }
tracing           = { workspace = true }
utoipa-swagger-ui = { default-features = false, features = ["axum"], workspace = true }
