[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-api-service"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["serde_json"]

[features]
axum            = ["dep:axum", "dep:hyper", "utoipa-swagger-ui/axum"]
default         = ["axum"]
instrumentation = []

[dependencies]
async-trait                = "0.1"
bytes                      = { workspace = true }
futures                    = { workspace = true }
lb-blend-service           = { features = ["libp2p"], workspace = true }
lb-chain-broadcast-service = { workspace = true }
lb-chain-leader-service    = { workspace = true }
lb-chain-service           = { features = ["libp2p"], workspace = true }
lb-core                    = { workspace = true }
lb-ledger                  = { workspace = true }
lb-libp2p                  = { workspace = true }
lb-network-service         = { workspace = true }
lb-sdp-service             = { workspace = true }
lb-storage-service         = { features = ["rocksdb-backend"], workspace = true }
lb-time-service            = { workspace = true }
lb-tx-service              = { features = ["libp2p", "mock", "openapi"], workspace = true }
overwatch                  = { workspace = true }
serde                      = { workspace = true }
serde_json                 = { workspace = true }
tokio                      = { features = ["net"], workspace = true }
tokio-stream               = { workspace = true }
tracing                    = { default-features = false, version = "0.1" }

# axum related dependencies
axum = { default-features = false, features = [
  "http1",
  "http2",
  "json",
  "query",
  "tokio",
], optional = true, version = "0.7.5" }
hyper = { default-features = false, optional = true, version = "1.0" }

# openapi related dependencies
utoipa = { workspace = true }
# XCompiling from Unix has issues downloading assets. Also, building with Nix can't download assets.
utoipa-swagger-ui = { features = ["vendored"], workspace = true }

[dev-dependencies]
axum              = { default-features = false, features = ["http1", "http2", "json", "query", "tokio"], version = "0.7.5" }
hyper             = { default-features = false, version = "1.0" }
reqwest           = { default-features = false, features = ["blocking"], workspace = true }
serde             = { workspace = true }
tracing           = { workspace = true }
utoipa-swagger-ui = { default-features = false, features = ["axum"], workspace = true }
